--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -13,9 +13,11 @@
   <!-- Bootstrap Core CSS -->
   <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
+
+  <link href="{{ url_for('static', filename='css/nouislider.min.css') }}" rel="stylesheet">
 
   <!-- Custom CSS -->
+  <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
   <style>
   body {
     padding-top: 70px;
@@ -82,6 +84,8 @@
   <!-- Bootstrap Core JavaScript -->
   <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
+  <script src="{{ url_for('static', filename='js/Chart.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/nouislider.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </body>
 
