Splittend index.js into smaller files
Signed-off-by: Alessandro Tundo <alessandrotundo94@gmail.com>

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -86,7 +86,9 @@
 
   <script src="{{ url_for('static', filename='js/Chart.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/nouislider.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
   <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/training-slider.js') }}"></script>
 </body>
 
 </html>
