Disabled viterbi button in random before sampling
Signed-off-by: Alessandro Tundo <alessandrotundo94@gmail.com>

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -102,7 +102,7 @@
               <button type="button" class="btn btn-warning"><i class="fa fa-step-forward fa-fw"></i>Sampling step</button>
             </div>
             <hr>
-            <button type="button" id="viterbiRandomButton"class="btn btn-primary btn-block"><i class="fa fa-magic fa-fw"></i>Run Viterbi algorithm</button>
+            <button type="button" id="viterbiRandomButton"class="btn btn-primary btn-block" disabled><i class="fa fa-magic fa-fw"></i>Run Viterbi algorithm</button>
           </div>
         </center>
       </div>
