--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,14 +12,14 @@
 
         <div class="tab-content">
           <div id="randomPieTab" class="tab-pane fade in active">
-              <div class="row center-block" style="height:400px; width:400px">
-                <canvas id="randomPieChart"></canvas>
-              </div>
+            <div class="row center-block" style="height:400px; width:400px">
+              <canvas id="randomPieChart"></canvas>
+            </div>
           </div>
           <div id="randomLineTab" class="tab-pane fade">
-              <div>
-                <canvas id="randomLineChart"></canvas>
-              </div>
+            <div>
+              <canvas id="randomLineChart"></canvas>
+            </div>
           </div>
         </div>
       </div>
@@ -56,23 +56,44 @@
           <li class="active"><a data-toggle="tab" href="#preloadedPieTab">States doughnut chart</a></li>
           <li><a data-toggle="tab" href="#preloadedRadarTab">States accuracy chart</a></li>
           <li><a data-toggle="tab" href="#preloadedLineTab">States sequence chart</a></li>
+          <li><a data-toggle="tab" href="#preloadedPerformanceTab">Performance</a></li>
         </ul>
 
         <div class="tab-content">
           <div id="preloadedPieTab" class="tab-pane fade in active">
-              <div class="row center-block" style="height:400px; width:400px">
-                <canvas id="preloadedPieChart"></canvas>
-              </div>
+            <div class="row center-block" style="height:400px; width:400px">
+              <canvas id="preloadedPieChart"></canvas>
+            </div>
           </div>
           <div id="preloadedRadarTab" class="tab-pane fade">
-              <div>
-                <canvas id="preloadedRadarChart" style="height:300px; width:300px"></canvas>
-              </div>
+            <div>
+              <canvas id="preloadedRadarChart" style="height:300px; width:300px"></canvas>
+            </div>
           </div>
           <div id="preloadedLineTab" class="tab-pane fade">
-              <div>
-                <canvas id="preloadedLineChart" style="height:400px; width:400px"></canvas>
-              </div>
+            <div>
+              <canvas id="preloadedLineChart" style="height:400px; width:400px"></canvas>
+            </div>
+          </div>
+          <div id="preloadedPerformanceTab" class="tab-pane fade">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>F-measure</th>
+                    <th>Precision</th>
+                    <th>Recall</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td id="f_measure"></td>
+                    <td id="precision"></td>
+                    <td id="recall"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
