Added peformance and about nav links
Signed-off-by: Alessandro Tundo <alessandrotundo94@gmail.com>

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -47,13 +47,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Smarthouse</a>
+        <a class="navbar-brand" href="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i>Smarthouse</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li>
-            <a href="/about"><i class="fa fa-info fa-fw" aria-hidden="true"></i>Demo</a>
+            <a href="/"><i class="fa fa-gamepad fa-fw" aria-hidden="true"></i></i>Demo</a>
+          </li>
+          <li>
+            <a href="/"><i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>Perfomance</a>
+          </li>
+          <li>
+            <a href="/"><i class="fa fa-info fa-fw" aria-hidden="true"></i>About</a>
           </li>
         </ul>
       </div>
