Completed performance page
Signed-off-by: Alessandro Tundo <alessandrotundo94@gmail.com>

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -67,7 +67,9 @@
           </div>
           <div id="preloadedRadarTab" class="tab-pane fade">
             <div>
-              <canvas id="preloadedRadarChart" style="height:300px; width:300px"></canvas>
+              <center>
+                <canvas id="preloadedRadarChart" style="height:300px; width:300px"></canvas>
+              </center>
             </div>
           </div>
           <div id="preloadedLineTab" class="tab-pane fade">
@@ -85,7 +87,7 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th>F-measure</th>
+                      <th>F-Measure</th>
                       <th>Precision</th>
                       <th>Recall</th>
                     </tr>
