--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -94,7 +94,7 @@
   <script src="{{ url_for('static', filename='js/Chart.min.js') }}"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
-  {% block scipts %}
+  {% block scripts %}
   {% endblock %}
 
 </body>
