Fixed radar chart data. Fixed random demo
Signed-off-by: Alessandro Tundo <alessandrotundo94@gmail.com>

--- a/src/templates/performance.html
+++ b/src/templates/performance.html
@@ -22,8 +22,7 @@
         </div>
         <div id="fmeasureTab" class="tab-pane fade">
           <center>
-            <div id="fmeasureChart">
-              <!-- <canvas id="fmeasureChart" style="height:400px; width:400px"></canvas> -->
+            <div id="fmeasureChart" style="height:400px; width:600px">
             </div>
           </center>
         </div>
