Added learning curves to performance page. Other minor fixes.
Signed-off-by: Alessandro Tundo <alessandrotundo94@gmail.com>

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -162,10 +162,8 @@
           <div class="col-md-12">
             <div class="btn-group">
               <button type="button" id="samplingButton" class="btn btn-success"><i class="fa fa-play fa-fw"></i>Sampling</button>
-              <button type="button" class="btn btn-warning"><i class="fa fa-step-forward fa-fw"></i>Sampling step</button>
+              <button type="button" id="viterbiRandomButton"class="btn btn-primary" disabled><i class="fa fa-magic fa-fw"></i>Run Viterbi algorithm</button>
             </div>
-            <hr>
-            <button type="button" id="viterbiRandomButton"class="btn btn-primary btn-block" disabled><i class="fa fa-magic fa-fw"></i>Run Viterbi algorithm</button>
           </div>
         </center>
       </div>
